manifest.fe.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-depeloyment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: feapp
  template:
    metadata:
      labels:
        app: feapp
    spec:
      containers:
        - name: feapp
          image: fe-demo-ingress
          imagePullPolicy: Never  # 🔥 Important
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: feapp
  ports:
    - protocol: TCP
      port: 80          # The port exposed inside the cluster (ClusterIP service port)
      targetPort: 3000  # The container port your app is actually listening on
  type: ClusterIP
