ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ingress-domain.com
    http:
      paths:
      - path: /be
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
      - path: /fe
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
